--- a/public/main.css
+++ b/public/main.css
@@ -1,12 +1,21 @@
 
-table.grid tr:hover td {
-  cursor: pointer;
-  background-color: #EEE;
-  opacity: 0.7;
+
+h1 {
+  padding-left: 1.5em;
 }
 
 table.grid tr:nth-child(odd) {
-  background-color: #F9F9F9;
+  background-color: #F3F3F3;
+}
+
+table.grid tr:hover td {
+  cursor: pointer;
+  background-color: #EEE;
+}
+
+div.content svg {
+  margin: 3em;
+  border: 1px solid black;
 }
 
 table.grid {
