--- a/public/main.css
+++ b/public/main.css
@@ -1,25 +1,36 @@
-
+div.content {
+  padding-top: 1.5em;
+}
 
 h1 {
   padding-left: 1.5em;
 }
 
-table.grid tr:nth-child(odd) {
+table.grid tr:nth-child(even), table.grid th {
   background-color: #F3F3F3;
 }
 
-table.grid tr:hover td {
+table.grid-clickable tr:hover td {
   cursor: pointer;
   background-color: #EEE;
 }
 
+table.detail {
+  left: 3em;
+  right: 3em;
+}
+
 div.content svg {
   margin: 3em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
   border: 1px solid black;
 }
 
 table.grid {
   margin: 3em;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
   border: 1px solid black;
 }
 
